# vampires_dpp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.html  configuration.html  examples.html  faq.html  genindex.html  gettingstarted.html  index.html  installation.html  introduction.html  mkdocs.yml  objects.inv  pipeline.html  py-modindex.html  pyproject.toml  quicklook.py  quickstart.html  search.html  searchindex.js  setup.py
.github/workflows/: CI.yml  docs.yml
_downloads/15f36662ae6c85f55533a1b46d0b3fda/: frame_selection.ipynb
_downloads/2f48926be5771672677018f008f48b42/: frame_selection.ipynb
_downloads/3e5954a8cf224f82f9caaa3c2fc896aa/: polarimetric_differential_imaging.ipynb
_downloads/554761896343b53dac2c4bf49a10fdd2/: speckle_imaging.ipynb
_downloads/7f8b96bf64704a4f4d2e71dc6b382484/: image_registration.ipynb
_downloads/920c7dd5ebe7f6ae9630fc515fb25267/: image_registration.ipynb
_downloads/e1b46699fa5b1f156d75fcf05768570e/: file_organization.ipynb
_sources/: configuration.md  index.rst  index.rst.txt  installation.md  installation.md.txt  introduction.md  introduction.md.txt  pipeline.md.txt  quickstart.md  quickstart.md.txt
_sources/api/: analysis.md  calibration.md.txt  frame_selection.md.txt  image_processing.md.txt  image_registration.md  index.md  index.md.txt  organization.md.txt  polarization.md  satellite_spots.md.txt
_sources/examples/: file_organization.ipynb.txt  frame_selection.ipynb.txt  image_registration.ipynb.txt  index.md.txt  polarimetric_differential_imaging.ipynb.txt  speckle_imaging.ipynb.txt
_sources/tutorials/: frame_selection.ipynb.txt  image_registration.ipynb.txt
_static/: documentation_options.js
api/: analysis.html  calibration.html  frame_selection.html  image_processing.html  image_registration.html  index.html  lucky_imaging.html  organization.html  pipeline.html  polarization.html  satellite_spots.html  specphot.html  utility.html
cinder/: base.html
docs/: api.md  cli.md  conf.py  configuration.md  examples.md  faq.md  gettingstarted.md  index.md  index.rst  installation.md  introduction.md  pipeline.md  quickstart.md
docs/api/: calibration.md  cli.md  frame_selection.md  image_registration.md  index.md  lucky_imaging.md  organization.md  pipeline.md  polarization.md  satellite_spots.md  specphot.md  utility.md
docs/examples/: file_organization.ipynb  frame_selection.ipynb  image_registration.ipynb  index.md  polarimetric_differential_imaging.ipynb
docs/tutorials/: frame_selection.ipynb  index.md
examples/: calibration.ipynb  file_organization.html  frame_selection.html  frame_selection.ipynb  image_registration.html  image_registration.ipynb  index.html  polarimetric_differential_imaging.html  polarimetry.ipynb  speckle_imaging.html
gettingstarted/: index.html
scripts/: lucky_image  vpp
search/: search_index.json
src/vampires_dpp/: __init__.py  analysis.py  calibration.py  coadd.py  combine_frames.py  constants.py  dpp.py  fixes.py  frame_select.py  frame_selection.py  headers.py  image_processing.py  image_registration.py  indexing.py  logging.py  lucky_imaging.py  mueller_matrices.py  organization.py  paths.py  pipeline.py  plotting.py  polarization.py  psf_models.py  registration.py  satellite_spots.py  specphot.py  strehl.py  synthpsf.py  util.py  wcs.py
src/vampires_dpp/calib/: calib_files.py  calibration.py  normalize.py
src/vampires_dpp/cli/: __init__.py  astro.py  calib.py  centroids.py  click_helpers.py  dpp.py  example.toml  find_dark_settings.py  main.py  new.py  nrm.py  organization.py  pipeline.py  prep.py  run.py  select.py  vpp.py
src/vampires_dpp/cli/commands/: calibs.py
src/vampires_dpp/data/: vampires_filters.csv  vampires_zeropoints.csv
src/vampires_dpp/nrm/: alignment.py  extraction.py  params.py  pdi.py  plotting.py  windowing.py
src/vampires_dpp/pdi/: analysis.py  diff_images.py  models.py  mueller_matrices.py  processing.py  utils.py
src/vampires_dpp/pipeline/: config.py  deprecation.py  modules.py  pipeline.py  templates.py
src/vampires_dpp/specphot/: filters.py  pickles.py  query.py  specphot.py
tests/: test_calibration.py  test_constants.py  test_fixes.py  test_headers.py  test_image_processing.py  test_image_registration.py  test_indexing.py  test_organization.py  test_pipeline.py  test_polarization.py  test_registration.py  test_satellite_spots.py  test_util.py  test_vampires_dpp.py
tests/pipeline/: test_config.py  test_pipeline.py
tests/test_pipeline/: test_config.py
tutorials/: frame_selection.html  image_registration.html  index.html
vampires_dpp/: calibration.py  fixes.py  frame_selection.py  headers.py  image_processing.py  image_registration.py  lucky_imaging.py  mueller_matrices.py  polarization_utils.py  satellite_spots.py  util.py
vampires_dpp/cli/: lucky_image.py
