[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vampires_dpp"
description = "VAMPIRES Data Processing Pipeline"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miles Lucas", email = "mdlucas@hawaii.edu"}]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "astropy",
    "astroquery",
    "astroscrappy",
    "click",
    "numpy",
    "opencv-python",
    "pandas",
    "photutils",
    "pyserde",
    "scikit-image",
    "scipy",
    "sep",
    "tomli",
    "tomli-w",
    "tqdm",
    "trogon",
]

[project.urls]
homepage = "https://github.com/scexao-org/vampires_dpp"
repository = "https://github.com/scexao-org/vampires_dpp"
documentation = "https://scexao-org.github.io/vampires_dpp/"

[project.optional-dependencies]
dev = [
    "autoflake",
    "black",
    "isort"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "black",
    "pytest-black",
]
docs = [
    "proplot",
    "sphinx",
    "myst_nb",
    "sphinx_book_theme",
    "zenodo-get"
]

[project.scripts]
dpp = "vampires_dpp.dpp:main"

[tool.setuptools.dynamic]
version = {attr = "vampires_dpp.__version__"}

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)s] (%(name)-15s) %(message)s"
addopts = "--randomly-seed=4796"

[tool.coverage.run]
source = ["vampires_dpp"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3