[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vampires_dpp"
description = "VAMPIRES Data Processing Pipeline"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miles Lucas", email = "mdlucas@hawaii.edu"}]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "annotated-types",
    "astropy",
    "astroquery",
    "astroscrappy",
    "click",
    "loguru",
    "numpy",
    "opencv-python",
    "pandas",
    "photutils",
    "pydantic",
    "synphot",
    "scikit-image",
    "scipy",
    "sep",
    "tomli-w",
    "tomli",
    "tqdm",
]

[project.urls]
homepage = "https://github.com/scexao-org/vampires_dpp"
repository = "https://github.com/scexao-org/vampires_dpp"
documentation = "https://scexao-org.github.io/vampires_dpp/"

[project.optional-dependencies]
dev = [
    "ruff"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "black",
    "pytest-black",
]
docs = [
    "proplot",
    "sphinx",
    "myst_nb",
    "sphinx_book_theme",
    "zenodo-get"
]

[project.scripts]
dpp = "vampires_dpp.cli.main:main"

[tool.setuptools.dynamic]
version = {attr = "vampires_dpp.__version__"}

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)s] (%(name)-15s) %(message)s"
addopts = "--randomly-seed=4796"

[tool.coverage.run]
source = ["vampires_dpp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "D", "I", "UP", "PL"] # pycodestyle, pydocstyle, isort, pyupgrade, pylint

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3