[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vampires_dpp"
description = "VAMPIRES Data Processing Pipeline"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miles Lucas", email = "mdlucas@hawaii.edu"}]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "annotated_types",
    "astropy",
    "astroquery",
    "astroscrappy",
    "click",
    "hcipy",
    "loguru",
    "numpy",
    "opencv_python",
    "pandas",
    "photutils",
    "pydantic",
    "reproject",
    "synphot",
    "scikit_image",
    "scipy",
    "sep",
    "tomli_w",
    "tomli",
    "tqdm",
]

[project.urls]
homepage = "https://github.com/scexao-org/vampires_dpp"
repository = "https://github.com/scexao-org/vampires_dpp"
documentation = "https://scexao-org.github.io/vampires_dpp/"

[project.optional-dependencies]
dev = ["ruff"]
test = [
    "pytest",
    "pytest_cov",
    "pytest_randomly"
]
docs = [
    "proplot",
    "sphinx",
    "myst_nb",
    "sphinx_book_theme",
    "sphinxcontrib-eval",
    "sphinx_autodoc_typehints",
    "zenodo_get",
    "sphinx_click",
]

[project.scripts]
dpp = "vampires_dpp.cli.main:main"

[tool.setuptools.dynamic]
version = {attr = "vampires_dpp.__version__"}

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)s] (%(name)-15s) %(message)s"
addopts = "--randomly-seed=4796"

[tool.coverage.run]
source = ["vampires_dpp"]


[tool.ruff.lint]
# pycodestyle, pydocstyle, isort, pyupgrade, pylint, tidyimports, use-pathlib, numpy, errmsg
select = ["E", "F", "B", "SIM", "I", "UP", "TID", "PTH", "NPY", "EM"]
ignore = [
    "E501", # line too long
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"
